--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,17 @@
 
 
 *{
-
+    padding: 0;
+    margin: 0;
     font-family: "Comic Neue", serif;
     font-weight: 300;
+    box-sizing: border-box;
 }
 
 body{
-    background-image: url(../images/yellow-back.jpg);
+    display: flex;
+    justify-content: center;
+    background-image: url(../images/gamer-bg.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     /*display: flex;
@@ -23,10 +27,13 @@ body{
 }
 
 main{
+    width: 80%;
     display: flex;
     flex-direction: column;
     padding: 10px 20px 0px 20px;
     row-gap: 15px;
+    background-color: white;
+
 }
 
 h1{
