--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,13 @@ main{
     width: 80%;
     display: flex;
     flex-direction: column;
-    padding: 10px 20px 0px 20px;
+    align-items: center;
+    padding: 20px 30px 20px 30px;
     row-gap: 15px;
     background-color: white;
-
+    background-image: url(../images/yellow-background.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
 h1{
@@ -51,10 +54,11 @@ h2{
 
 .mascota-formulario{
     display: flex;
-    column-gap: 50px;
+    row-gap: 60px;
+    flex-direction: column;
 }
 
-.btn-style1{
+#boton-mascota{
     align-self: center;
 }
 
@@ -67,25 +71,52 @@ h2{
 /* Convertir en contenedores flexbox a las secciones */
 
 #seleccionar-mascota{
+    width: 90%;
     display: flex;
     column-gap: 20px;
     flex-direction: column;
     /*align-items: center;
     justify-content: center;*/
     row-gap: 15px;
+    background-color: white;
+    padding: 30px 15px 40px 15px;
 }
 
 #seleccionar-ataque{
+    width: 90%;
+    background-color: white;
     display: flex;
     flex-direction: column;
 }
 
 #mensajes{
+    width: 90%;
+    background-color: white;
     display: flex;
     flex-direction: column;
     row-gap: 20px;
 }
 
 #reiniciar{
+    width: 90%;
+    background-color: white;
     display: flex;
+}
+
+/* Componente: Botones*/
+
+.btn-style1{
+    color: white;
+    background-color: #A5BFCC;
+    border: 0;
+    padding: 10px 25px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition-property: all;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
+}
+
+.btn-style1:hover{
+    background-color: #7E99A3;
 }
