--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ h2 img{
 
 }
 
-.card-mokepon div:nth-child(1) label{
+.card-mokepon div:nth-child(1) div{
     display: flex;
     justify-content: center;
 }
