--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,10 @@ h2 img{
     background-color: white;
     display: flex;
     flex-direction: column;
+    padding: 30px 15px 40px 15px;
+
+    row-gap: 25px;
+    align-items: center;
 }
 
 #mensajes{
