--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,12 @@ h2 img{
     width: 45px;
 }
 
+h3{
+    font-size: 24px;
+    font-weight: 700;
+    color: white;
+}
+
 .mascota-formulario{
     display: flex;
     row-gap: 60px;
@@ -106,9 +112,8 @@ h2 img{
     background-color: white;
     display: flex;
     flex-direction: column;
-    padding: 30px 15px 40px 15px;
-
-    row-gap: 25px;
+    padding: 12px 15px 25px 15px;
+    row-gap: 15px;
     align-items: center;
 }
 
@@ -116,7 +121,7 @@ h2 img{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding: 20px 80px;
+    padding: 10px 80px;
     column-gap: 80px;
 }
 
@@ -260,6 +265,25 @@ input[type=radio]{
 }
 
 
+.card-mokepon-juego > div:nth-child(3){
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 8px;
+}
+
+.card-mokepon-juego > div:nth-child(3) > div:nth-child(3){
+    display: flex;
+    column-gap: 10px;
+}
+
+.card-mokepon-juego > div:nth-child(3) > div:nth-child(4){
+    display: flex;
+    column-gap: 10px;
+}
+
+
 /* Jerarquía de textos */
 
 .text-mokepon-name{
@@ -277,6 +301,18 @@ input[type=radio]{
 .text-button{
     font-size: 20px;
     font-weight: 700;
+}
+
+.text-mokepon-name-clear{
+    font-size: 22px;
+    font-weight: 700;
+    color: white;
+}
+
+.text-mokepon-subtitles{
+    font-size: 16px;
+    font-weight: 600;
+    color: #7E99A3;
 }
 
 
