--- a/css/styles.css
+++ b/css/styles.css
@@ -137,8 +137,8 @@ h3{
 }
 
 #reiniciar{
-    width: 90%;
-    background-color: white;
+   /* width: 90%;
+    background-color: white;*/
     display: flex;
 }
 
@@ -409,3 +409,34 @@ input[type=radio]{
     left: calc(50% - 25px);
 }
 
+/*Botón Flotante Reiniciar*/
+
+
+#boton-reiniciar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.icon-fijo{
+    font-size: 50px;
+
+}
+
+.btn-style2{
+    color: white;
+    background-color: #e3350d;
+    border: 4px solid black;
+    padding: 35px 15px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    cursor: pointer;
+    transition-property: all;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
+}
+
+
+.btn-style2:hover{
+    background-color: #A6270A;
+}
