--- a/css/styles.css
+++ b/css/styles.css
@@ -140,9 +140,13 @@ h3{
    /* width: 90%;
     background-color: white;*/
     display: flex;
+
+    /*Capitulo 8: las 3 propiedades que a continuación se comentan han sido movidas a la clase boton-flotante para estandarizar su uso*/
+    /*
     position: fixed;
     right: 10%;
     top: 20%;
+    */
 }
 
 /* Componente: Botones*/
@@ -453,17 +457,29 @@ input[type=radio]{
     width: 45px;
 }
 
-.boton-flotante{
+.boton-flotante-alineamiento{
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 10px;
 }
 
+.boton-flotante-r10-t20{
+    position: fixed;
+    right: 10%;
+    top: 20%;
+}
+
+.boton-flotante-r0-t20{
+    position: fixed;
+    right: 0%;
+    top: 20%;
+}
+
 .btn-style3{
     color: white;
     background-color: #4DAD5B;
-    border: 4px solid black;
+    border: 4px solid white;
     border-right: 0;
     padding: 35px 10px;
     border-top-left-radius: 25px;
