--- a/css/styles.css
+++ b/css/styles.css
@@ -325,13 +325,13 @@ input[type=radio]{
 }
 
 .text-batalla{
-    font-size: 18px;
+    font-size: 16px;
     color: #4b7f94;
     font-weight: 600;
 }
 
 .text-batalla-final{
-    font-size: 18px;
+    font-size: 16px;
     color: #E3350D;
     font-weight: 600;
 }
@@ -381,9 +381,13 @@ input[type=radio]{
 /*Cajita de mensajes*/
 
 #mostrar-mensajes{
-    width: 100%;
+    /*width: 100%;*/ /*Nota aclaratoria: se cambión por un width de 22% en el capítulo 10*/
     background-color: black;
     padding: 15px;
+    position: absolute;
+    width: 22%;
+    left: 0%;
+    top: 0;
 }
 
 #mostrar-mensajes > div{
@@ -396,7 +400,7 @@ input[type=radio]{
 #mostrar-mensajes > div > div{
     width: 100%;
     background-color: #4963B1;
-    padding: 10px 50px 10px 20px;
+    padding: 10px 20px 10px 20px;
     border-radius: 25px;
 }
 
