--- a/css/styles.css
+++ b/css/styles.css
@@ -324,9 +324,22 @@ input[type=radio]{
     color: #7E99A3;
 }
 
-.text-batalla{
+.text-batalla-jugador{
     font-size: 16px;
     color: #4b7f94;
+    font-weight: 600;
+}
+
+.text-batalla-enemigo{
+    font-size: 16px;
+    color: #4b7f94;
+    font-weight: 600;
+    align-self: flex-end;
+}
+
+.text-batalla-veredicto{
+    font-size: 16px;
+    color: #EE6B2F;
     font-weight: 600;
 }
 
@@ -334,6 +347,7 @@ input[type=radio]{
     font-size: 16px;
     color: #E3350D;
     font-weight: 600;
+    align-self: center;
 }
 
 
@@ -386,7 +400,7 @@ input[type=radio]{
     /*background-color: black;*/ /*Nota aclaratoria: Se quitó en el capítulo 10*/
     padding: 15px;
     position: absolute;
-    width: 21%;
+    width: 22%;
     left: 0%;
     top: 25%;
 }
@@ -408,7 +422,7 @@ input[type=radio]{
 
 #mostrar-mensajes > div > div > div{
     width: 100%;
-    padding: 25px 30px;
+    padding: 25px 15px;
     border-radius: 10px;
     outline: 3px solid black;
     position: relative;
