--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,1 +1,27 @@
 
+.cards-container{
+    grid-template-columns: repeat(3, 1fr);
+    /*column-gap: 15px;*/
+    row-gap: 25px;
+}
+
+.card-mokepon div:nth-child(2){
+    row-gap: 5px;
+}
+
+main{
+    width: 90%;
+    padding: 20px 15px 20px 15px;
+}
+#seleccionar-mascota{
+    padding: 30px 30px 40px 30px;
+}
+
+.btn-style3{
+    padding: 25px 5px;
+
+}
+
+.text-button{
+    font-size: 15px;
+}
