BREAKPOINT 2 - 1era pantalla - estableciendo una columna a las cards y una altura automática

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,19 @@
 
-h1{
-    color: blueviolet;
+/* 1° PANTALLA */
+
+.cards-container{
+    grid-template-columns: repeat(1, 1fr);
+}
+
+body{
+    height: auto;
+}
+
+#seleccionar-mascota{
+    height: auto;
+}
+
+
+#seleccionar-ataque{
+    height: auto;
 }
