--- a/css/mobile.css
+++ b/css/mobile.css
@@ -25,7 +25,7 @@ h2{
 
 #seleccionar-ataque > div:nth-child(2){
     column-gap: 0px;
-    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(2, auto);
 
     grid-template-rows: repeat(2, auto);
 
@@ -44,4 +44,23 @@ h2{
 .card-mokepon-juego > div:nth-child(2) > div > div{
     width: 110px;
     height: 110px;
+}
+
+.card-mokepon-juego > div:nth-child(3) > div:nth-child(4){
+    flex-direction: column;
+}
+
+.card-mokepon-juego > div:nth-child(2) > div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px;
+    border-radius: 50%;
+    background-color: white;
+}
+
+#seleccionar-ataque{
+    width: 98%;
+    padding: 12px 8px;
+    row-gap: 20px;
 }
