--- a/css/mobile.css
+++ b/css/mobile.css
@@ -51,16 +51,21 @@ h2{
 }
 
 .card-mokepon-juego > div:nth-child(2) > div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     padding: 4px;
-    border-radius: 50%;
-    background-color: white;
 }
 
 #seleccionar-ataque{
     width: 98%;
     padding: 12px 8px;
     row-gap: 20px;
+}
+
+.card-mokepon-juego{
+    padding: 5px 0px;
+    border-radius: 20px;
+    row-gap: 0px;
+
+}
+.card-mokepon-juego > div:nth-child(3){
+    row-gap: 0px;
 }
