--- a/css/mobile.css
+++ b/css/mobile.css
@@ -73,3 +73,16 @@ h2{
 main{
     row-gap: 0px;
 }
+
+.btn-ataque{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    padding: 12px;
+    box-shadow: 1px 2px 10px 0px black;
+}
+
+#seleccionar-ataque > div:nth-child(3){
+    top: 12%;
+    left: 70%;
+}
